--- a/EventsMonitoring/EventsMonitoring.csproj
+++ b/EventsMonitoring/EventsMonitoring.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <ApplicationIcon>big-data_15102521.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
